[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/UI/IngameUI.gd" type="Script" id=1]
[ext_resource path="res://Scripts/UI/ResourcePanel.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fantasy Free Game Kit/Objects and Power Ups/PNG/Chest_01.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fantasy Free Game Kit/Objects and Power Ups/PNG/Heart.png" type="Texture" id=4]

[node name="IngameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ResourcePanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_right = 128.0
margin_bottom = 48.0
rect_clip_content = true
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="ResourcePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0

[node name="TextureRect" type="TextureRect" parent="ResourcePanel/HBoxContainer"]
margin_right = 58.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="CoinsValue" type="Label" parent="ResourcePanel/HBoxContainer"]
margin_left = 62.0
margin_right = 120.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0"
align = 1
valign = 1

[node name="TextureRect2" type="TextureRect" parent="ResourcePanel/HBoxContainer"]
margin_left = 124.0
margin_right = 182.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="HeartsValue" type="Label" parent="ResourcePanel/HBoxContainer"]
margin_left = 186.0
margin_right = 246.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0"
align = 1
valign = 1
